# gravity

./: CMakeLists.txt  NOTICE.txt  README.md  args.h  display.cc  display.h  main.cc  main_opencl.cc  opencl.cc  opencl.h  physics_cl.cc  physics_cl.h  physics_gl.cc  physics_gl.h  pobject.cc  pobject.h  shader.cc  shader.h  simpleio.cc  simpleio.h
res/: double.cl  physics.cl  simple_mesh.fs  simple_mesh.vs
src/: args.h  display.cc  display.h  main.cc  main_opencl.cc  physics_gl.cc  physics_gl.h  shader.h  simpleio.cc
